sample_ingress.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: swagger-editor
  namespace: swagger
  labels:
    app: swagger-editor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: swagger-editor
  template:
    metadata:
      labels:
        app: swagger-editor
    spec:
      containers:
      - name: swagger-editor
        image: swaggerapi/swagger-editor
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: swagger-editor
  namespace: swagger
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: swagger-editor
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swagger-editor
  namespace: swagger
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
        - web.cliap.de
      secretName: web.cliap.de-tls
  rules:
    - host: web.cliap.de
      http:
        paths:
          - path: /test/*
            pathType: Prefix
            backend:
              service:
                name: swagger-editor
                port:
                  number: 8080
